--- a/1. Python/3. Getting Started with Python.ipynb
+++ b/1. Python/3. Getting Started with Python.ipynb
@@ -4,51 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning Data\n",
+    "# Getting Started with Python\n",
     "\n",
-    "In this notebook we learn about how to fix the following common problems:\n",
+    "In this notebook we get a from-scratch introduction to Python, structured as follows:\n",
     "\n",
-    "- <a href='#Importing Problems'>Importing Problems</a>  \n",
-    "-   <a href='#Commas'>Commas</a>\n",
-    "-  <a href='#Percentages'>Percentages</a>\n",
-    "-   <a href='#Categories'>Categories</a>\n",
-    "-   <a href='#Missing Values'>Missing Values</a>\n",
-    "- <a href='#Badly Organised Data'>Badly Organised Data</a>\n",
-    "-  <a href='#Outliers'>Outliers</a>\n",
-    "-   <a href='#Questionable Data'>Questionable Data</a>\n",
-    "-   <a href='#Creating Variables'>Creating Variables</a>\n",
-    "- <a href='#Exporting Problems'>Exporting Problems</a>  \n",
-    "\n",
-    "\n"
+    "- <a href='#What is Python?'>What is Python?</a>  \n",
+    "-   <a href='#Why Python?'>Why Python?</a>\n",
+    "-  <a href='#Downloading and installing Python'>Downloading and installing Python</a>\n",
+    "-   <a href='#Setting up your environment'>Setting up your environment</a>\n",
+    "-   <a href='#Elementary Commands'>Elementary Commands</a>\n",
+    "- <a href='#Object assignment'>Object assignment</a>\n",
+    "-   <a href='#Functions'>Functions</a>\n",
+    "-  <a href='#Data types'>Data types</a>\n",
+    "- <a href='#Data structures'>Data structures</a>\n",
+    "-  <a href='#Loops'>Loops</a>\n",
+    "-  <a href='#Importing files'>Importing files</a>\n",
+    "-  <a href='#Importing packages'>Importing packages</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Problems <a id='Importing Problems?'></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Commas <a id='Commas'></a>\n",
-    "\n"
+    "### What is Python? <a id='What is Python?'></a>"
    ]
   },
   {
@@ -69,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Percentages <a id='Percentages'></a>\n",
+    "### Why Python? <a id='Why Python?'></a>\n",
     "\n"
    ]
   },
@@ -91,7 +69,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categories<a id='Categories'></a>\n",
+    "### Downloading and installing Python <a id='Downloading and installing Python'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up your environment <a id='Setting up your environment'></a>\n",
     "\n"
    ]
   },
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Missing Values <a id='Missing Values'></a>\n",
+    "### Elementary Commands <a id='Elementary Commands'></a>\n",
     "\n"
    ]
   },
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Badly Organised Data <a id='Badly Organised Data'></a>\n",
+    "### Object assignment <a id='Object assignment'></a>\n",
     "\n"
    ]
   },
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outliers <a id='Outliers'></a>\n",
+    "### Functions <a id='Functions'></a>\n",
     "\n"
    ]
   },
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Questionable Data <a id='Questionable Data'></a>\n",
+    "### Data types <a id='Data types'></a>\n",
     "\n"
    ]
   },
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Variables <a id='Creating Variables'></a>\n",
+    "### Data structures <a id='Data structures'></a>\n",
     "\n"
    ]
   },
@@ -228,7 +228,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exporting Problems <a id='Exporting Problems'></a>\n",
+    "### Loops <a id='Loops'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing files <a id='Importing files'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing packages <a id='Importing packages'></a>\n",
     "\n"
    ]
   },
