--- a/1. Python/5. Machine Learning.ipynb
+++ b/1. Python/5. Machine Learning.ipynb
@@ -4,20 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning Data\n",
+    "# Machine Learning\n",
     "\n",
-    "In this notebook we learn about how to fix the following common problems:\n",
+    "In this notebook we get a from-scratch introduction to Machine Learning, structured as follows:\n",
     "\n",
-    "- <a href='#Importing Problems'>Importing Problems</a>  \n",
-    "-   <a href='#Commas'>Commas</a>\n",
-    "-  <a href='#Percentages'>Percentages</a>\n",
-    "-   <a href='#Categories'>Categories</a>\n",
-    "-   <a href='#Missing Values'>Missing Values</a>\n",
-    "- <a href='#Badly Organised Data'>Badly Organised Data</a>\n",
-    "-  <a href='#Outliers'>Outliers</a>\n",
-    "-   <a href='#Questionable Data'>Questionable Data</a>\n",
-    "-   <a href='#Creating Variables'>Creating Variables</a>\n",
-    "- <a href='#Exporting Problems'>Exporting Problems</a>  \n",
+    "- <a href='#What is Machine Learning?'>What is Machine Learning?</a>  \n",
+    "- <a href='#ML in Economics'>ML in Economics</a>  \n",
+    "-   <a href='#sklearn'>sklearn</a>\n",
+    "-  <a href='#Preprocessing'>Preprocessing</a>\n",
+    "-  <a href='#Parameters'>Parameters</a>\n",
+    "-   <a href='#Categorical Predictors'>Categorical Predictors</a>\n",
+    "-   <a href='#Testing Predictions'>Testing Predictions</a>\n",
+    "-   <a href='#Continous Predictors'>Continous Predictors</a>\n",
+    "- <a href='#Decision Trees'>Decision Trees</a>\n",
+    "-   <a href='#Random Forests'>Random Forests</a>\n",
+    "-   <a href='#Random Forests'>Random Forests</a>\n",
+    "-   <a href='#Natural Language Processing'>Natural Language Processing</a>\n",
+    "-  <a href='#Unsupervised Learning'>Unsupervised Learning</a>\n",
+    "-   <a href='#Stacking Models'>Stacking Models</a>\n",
     "\n",
     "\n"
    ]
@@ -26,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Problems <a id='Importing Problems?'></a>"
+    "### What is Machine Learning? <a id='What is Machine Learning?'></a>"
    ]
   },
   {
@@ -47,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commas <a id='Commas'></a>\n",
+    "### ML in Economics <a id='ML in Economics'></a>\n",
     "\n"
    ]
   },
@@ -69,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Percentages <a id='Percentages'></a>\n",
+    "### sklearn <a id='sklearn'></a>\n",
     "\n"
    ]
   },
@@ -91,34 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categories<a id='Categories'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Missing Values <a id='Missing Values'></a>\n",
+    "### Preprocessing <a id='Preprocessing'></a>\n",
     "\n"
    ]
   },
@@ -140,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Badly Organised Data <a id='Badly Organised Data'></a>\n",
+    "### Parameters <a id='Parameters'></a>\n",
     "\n"
    ]
   },
@@ -162,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outliers <a id='Outliers'></a>\n",
+    "### Categorical Predictors <a id='Categorical Predictors'></a>\n",
     "\n"
    ]
   },
@@ -184,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Questionable Data <a id='Questionable Data'></a>\n",
+    "### Testing Predictions  <a id='Testing Predictions'></a>\n",
     "\n"
    ]
   },
@@ -206,7 +183,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Variables <a id='Creating Variables'></a>\n",
+    "### Continous Predictors <a id='Continous Predictors'></a>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Trees <a id='Decision Trees'></a>\n",
     "\n"
    ]
   },
@@ -228,7 +226,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exporting Problems <a id='Exporting Problems'></a>\n",
+    "### Random Forests <a id='Random Forests'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Natural Language Processing <a id='Natural Language Processing'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unsupervised Learning <a id='Unsupervised Learning'></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stacking Models <a id='Stacking Models'></a>\n",
     "\n"
    ]
   },
