--- a/1. Python/6. Web Scraping.ipynb
+++ b/1. Python/6. Web Scraping.ipynb
@@ -4,21 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning Data\n",
+    "# Web Scraping\n",
     "\n",
-    "In this notebook we learn about how to fix the following common problems:\n",
+    "In this notebook we get a from-scratch introduction to web scraping, structured as follows:\n",
     "\n",
-    "- <a href='#Importing Problems'>Importing Problems</a>  \n",
-    "-   <a href='#Commas'>Commas</a>\n",
-    "-  <a href='#Percentages'>Percentages</a>\n",
-    "-   <a href='#Categories'>Categories</a>\n",
-    "-   <a href='#Missing Values'>Missing Values</a>\n",
-    "- <a href='#Badly Organised Data'>Badly Organised Data</a>\n",
-    "-  <a href='#Outliers'>Outliers</a>\n",
-    "-   <a href='#Questionable Data'>Questionable Data</a>\n",
-    "-   <a href='#Creating Variables'>Creating Variables</a>\n",
-    "- <a href='#Exporting Problems'>Exporting Problems</a>  \n",
-    "\n",
+    "- <a href='#What is Web Scraping?'>What is Web Scraping?</a>  \n",
+    "- <a href='#When Will Scraping Work?'>When Will Scraping Work?</a>  \n",
+    "-   <a href='#Scraping with BeautifulSoup'>Scraping with BeautifulSoup</a>\n",
+    "- <a href='#Server Requests'>Server Requests</a>  \n",
+    "-   <a href='#Classes'>Classes</a>\n",
+    "-   <a href='#Tags'>Tags</a>\n",
+    "- <a href='#Scraping with Selenium'>Scraping with Selenium</a>\n",
+    "-   <a href='#Navigating Pages'>Navigating Pages</a>\n",
+    "-   <a href='#Exporting to Documents'>Exporting to Documents</a>\n",
     "\n"
    ]
   },
@@ -26,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Problems <a id='Importing Problems?'></a>"
+    "### What is Web Scraping? <a id='What is Web Scraping?'></a>"
    ]
   },
   {
@@ -47,29 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commas <a id='Commas'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Percentages <a id='Percentages'></a>\n",
+    "### When Will Scraping Work? <a id='When Will Scraping Work?'></a>\n",
     "\n"
    ]
   },
@@ -91,34 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categories<a id='Categories'></a>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Missing Values <a id='Missing Values'></a>\n",
+    "### Scraping with BeautifulSoup <a id='Scraping with BeautifulSoup'></a>\n",
     "\n"
    ]
   },
@@ -140,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Badly Organised Data <a id='Badly Organised Data'></a>\n",
+    "### Server Requests <a id='Server Requests'></a>\n",
     "\n"
    ]
   },
@@ -162,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outliers <a id='Outliers'></a>\n",
+    "### Classes <a id='Classes'></a>\n",
     "\n"
    ]
   },
@@ -184,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Questionable Data <a id='Questionable Data'></a>\n",
+    "### Tags <a id='Tags'></a>\n",
     "\n"
    ]
   },
@@ -206,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Variables <a id='Creating Variables'></a>\n",
+    "### Scraping with Selenium <a id='Scraping with Selenium'></a>\n",
     "\n"
    ]
   },
@@ -228,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exporting Problems <a id='Exporting Problems'></a>\n",
+    "### Exporting to Documents <a id='Exporting to Documents'></a>\n",
     "\n"
    ]
   },
