--- a/1. Python/2. Data.ipynb
+++ b/1. Python/2. Data.ipynb
@@ -264,7 +264,29 @@
     "- **.xlsx** and **.xls** files are Excel files made up of 'sheets' or collections of csv's. They are harder to use with non-Excel software (including Python and R) so .csv is best sought where possible.\n",
     "- **.pdf** this is an obvious one but it's important to note that pdf's can be transformed into csv's if need be. Adobe Acrobat is the most useful software to do this. \n",
     "\n",
-    "The key reason to be aware of what type of data you're downloading is that each type has different implications for using the dataset with Python and R. All data we are interested in (inculding things like pictures and words) need to be able to be stored in what is essentially a spreadsheet so that they can be read by our programming languages. "
+    "The key reason to be aware of what type of data you're downloading is that each type has different implications for using the dataset with Python and R. All data we are interested in (inculding things like pictures and words) need to be able to be stored in what is essentially a spreadsheet so that they can be read by our programming languages. \n",
+    "\n",
+    "Essentially any format of data which is made up of rows and separated by some variable is a valid format of data for us to use in Python or R. For example:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Observation Number, Height, Weight  \n",
+    "1,168,56  \n",
+    "2,188,103  \n",
+    "3,177,74  \n",
+    "4,162,63  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "Is a perfectly valid dataset, which could be stored as:\n",
+    "\n",
+    "|  Observation Number |   Height|  Weight |   |   |\n",
+    "|---|---|---|---|---|\n",
+    "|  1 |  168 |  56 |   |   |\n",
+    "|  2 |  188 |  103 |   |   |\n",
+    "|  3 |  177 |  74 |   |   |\n",
+    "\n",
+    "\n"
    ]
   },
   {
