--- a/1. Python/2. Data.ipynb
+++ b/1. Python/2. Data.ipynb
@@ -280,11 +280,11 @@
     "\n",
     "Is a perfectly valid dataset, which could be stored as:\n",
     "\n",
-    "|  Observation Number |   Height|  Weight |   |   |\n",
-    "|---|---|---|---|---|\n",
-    "|  1 |  168 |  56 |   |   |\n",
-    "|  2 |  188 |  103 |   |   |\n",
-    "|  3 |  177 |  74 |   |   |\n",
+    "|  Observation Number |   Height|  Weight |\n",
+    "|---|---|---|\n",
+    "|  1 |  168 |  56 |\n",
+    "|  2 |  188 |  103 |\n",
+    "|  3 |  177 |  74 |\n",
     "\n",
     "\n"
    ]
